--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   google_fonts:
+  flutter_map:
+  geolocator: ^5.1.5
+  permission_handler: ^3.0.1
+  fluttertoast: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - fonts/
+    - lib/assets/images/virus.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
