--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   geolocator: ^5.1.5
   permission_handler: ^3.0.1
   fluttertoast: ^3.1.3
+  url_launcher:
 
 dev_dependencies:
   flutter_test:
