--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   permission_handler: ^3.0.1
   fluttertoast: ^3.1.3
   url_launcher:
+  http:
 
 dev_dependencies:
   flutter_test:
